Use some Java 8 features
These suggestions were produced by a refactoring tool that we have;
the particular decisions it made were based on heuristics over which I
have no control. Some suggestions were edited for brevity, and to omit
references to unreleased Guava features.

Change-Id: I9deac0afd6eda8fdc5a369816a4ee2bbe16924ba